src/main/java/com/example/fas/exceptions/user/error/HadUserActiveException.java
package com.example.fas.exceptions.user.error;

public class HadUserActiveException extends RuntimeException {
    public HadUserActiveException(String message) {
        super(message);
    }
    
}
